--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2024"
 anyhow = "1.0.98"
 thiserror = "2.0.12"
 clap = { version = "4.5.40", features = ["derive"] }
+rayon = "1.10.0"
 ordered-float = "5.0.0"
 num-traits = "0.2.19"
 ndarray = "0.16.1"
