--- a/retto-core/Cargo.toml
+++ b/retto-core/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 thiserror.workspace = true
+rayon.workspace = true
 ordered-float.workspace = true
 num-traits.workspace = true
 ndarray.workspace = true
