--- a/retto-core/Cargo.toml
+++ b/retto-core/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+paste.workspace = true
 thiserror.workspace = true
 rayon.workspace = true
 ordered-float.workspace = true
