--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ paste = "1.0.15"
 walkdir = "2.5.0"
 anyhow = "1.0.98"
 thiserror = "2.0.12"
+serde = "1.0.219"
+serde_json = "1.0.140"
 clap = { version = "4.5.40", features = ["derive"] }
 rayon = "1.10.0"
 ordered-float = "5.0.0"
