feat: must use cpu in `retto-cli`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ clipper-sys = { git = "https://github.com/NekoImageLand/clipper-sys", branch = "
 opt-level = 2
 lto = true
 codegen-units = 1
+debug = true
 
 [profile.release.package.retto-wasi]
 opt-level = "s"
