feat: infected async-like retto-wasm

--- a/retto-wasm/.cargo/config.toml
+++ b/retto-wasm/.cargo/config.toml
@@ -5,13 +5,16 @@ build-std = ["std"]
 [build]
 target = "wasm32-unknown-emscripten"
 rustflags = [
-    "-Clink-args=-Os -flto -fno-rtti -pthread -msse4.2 -msimd128 -gsource-map -sEXPORT_ALL -sSTACK_SIZE=5MB -sUSE_PTHREADS -sDEFAULT_PTHREAD_STACK_SIZE=2MB -sPTHREAD_POOL_SIZE=50 -sINITIAL_MEMORY=1GB -sEXPORT_ES6 --no-entry",
+    "-Clink-args=-Os -flto -fno-rtti -pthread -msse4.2 -msimd128 -sEXPORT_ALL -sSTACK_SIZE=5MB -sDEFAULT_PTHREAD_STACK_SIZE=2MB -sPTHREAD_POOL_SIZE=50 -sINITIAL_MEMORY=1GB -sEXPORT_ES6 --no-entry",
     "-Ctarget-feature=+atomics,+bulk-memory,+mutable-globals"
 ]
 
 [env]
-CXXFLAGS_wasm32_unknown_emscripten="-Os -flto -fexceptions -fno-rtti -pthread -msse4.2-msimd128 -sUSE_PTHREADS"
+CXXFLAGS_wasm32_unknown_emscripten="-Os -flto -fexceptions -fno-rtti -pthread -msse4.2 -msimd128"
 
 # Debug build might benefit from further flags, but one cannot yet set debug-only rustflags.
 # See: https://github.com/rust-lang/cargo/issues/10271
 # -fexceptions, -gsource-map, -sASSERTIONS, -sNO_DISABLE_EXCEPTION_CATCHING
+# Observing emscripten's generation/linking:
+# (rustflags): --emit=llvm-ir
+# (env): RUSTC_LOG=rustc_codegen_ssa::back::link=info; EMCC_DEBUG=2
