--- a/retto-wasm/Cargo.toml
+++ b/retto-wasm/Cargo.toml
@@ -14,3 +14,4 @@ once_cell.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+paste.workspace = true
