--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,8 @@ fast_image_resize = { version = "5.1.4", features = ["image"] }
 geo = "0.30.0"
 geo-types = "0.7.16"
 geo-clipper = "0.9.0"
-ort = { version = "=2.0.0-rc.10", default-features = false }
-ort-sys = { version = "=2.0.0-rc.10", default-features = false }
+ort = { git = "https://github.com/pykeio/ort", default-features = false }
+ort-sys = { git = "https://github.com/pykeio/ort", default-features = false }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 hf-hub = "0.4.3"
