--- a/retto-wasm/fe/package.json
+++ b/retto-wasm/fe/package.json
@@ -38,5 +38,8 @@
     "rollup-plugin-copy": "^3.5.0",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "axios": "^1.10.0"
   }
 }
