--- a/retto-wasm/Cargo.toml
+++ b/retto-wasm/Cargo.toml
@@ -14,3 +14,7 @@ serde_json.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 paste.workspace = true
+
+
+[features]
+download-models = ["retto-core/download-models"]
