--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -17,6 +17,7 @@ jobs:
   build-cli:
     name: Build retto-cli
     runs-on: ${{ matrix.host }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     strategy:
       matrix:
         host: [ ubuntu-latest, windows-latest, macos-latest ]
@@ -37,6 +38,7 @@ jobs:
   build-wasm:
     name: Build retto-wasm
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v4
       - uses: extractions/setup-just@v3
@@ -47,4 +49,6 @@ jobs:
       - name: Setup Rust toolchain
         run: just setup
       - name: Build retto-wasm
-        run: just build-wasm
+        run: |
+          sudo apt-get update && sudo apt-get install -y libssl-dev
+          just build-wasm
