fix: adjust deps

--- a/retto-core/Cargo.toml
+++ b/retto-core/Cargo.toml
@@ -22,7 +22,7 @@ geo-clipper.workspace = true
 ort = { workspace = true, optional = true, default-features = false }
 ort-sys = { workspace = true, optional = true, default-features = false } # https://github.com/pykeio/ort/issues/399
 tracing.workspace = true
-hf-hub = { workspace = true, optional = true, features = ["ureq", "rustls-tls"] }
+hf-hub = { workspace = true, optional = true }
 
 [build-dependencies]
 hf-hub.workspace = true
@@ -31,7 +31,7 @@ tracing-subscriber.workspace = true
 
 [features]
 serde = ["dep:serde", "serde/default", "dep:serde_json", "serde_json/default", "ordered-float/serde", "ndarray/serde"]
-download-models = ["dep:hf-hub"]
+download-models = []
 hf-hub = ["dep:hf-hub"]
 backend-ort = ["ort/default"]
 backend-ort-cuda = ["backend-ort", "ort/cuda"]
