--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,6 +91,4 @@ jobs:
       - name: Setup Rust toolchain
         run: just setup
       - name: Build retto-wasm
-        run: |
-          sudo apt-get update && sudo apt-get install -y libssl-dev
-          just build-wasm
+        run: just build-wasm
