--- a/retto-wasm/fe/package.json
+++ b/retto-wasm/fe/package.json
@@ -23,7 +23,7 @@
     "wasm",
     "ocr"
   ],
-  "author": "pk5ls20",
+  "author": "NekoImageLand",
   "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/NekoImageLand/retto/issues"
