--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
           version: 4.0.4
       - name: Setup Rust toolchain
         run: just setup
-      - name: Check formatting
+      - name: Format Check
         run: just fmt-check
 
   clippy-check:
@@ -37,7 +37,7 @@ jobs:
           version: 4.0.4
       - name: Setup Rust toolchain
         run: just setup
-      - name: Check Clippy
+      - name: Clippy Check
         run: just clippy-check
 
   build-check:
@@ -51,7 +51,7 @@ jobs:
           version: 4.0.4
       - name: Setup Rust toolchain
         run: just setup
-      - name: Check Clippy
+      - name: Build Check
         run: just build-check
 
   build-cli:
@@ -71,10 +71,7 @@ jobs:
       - name: Setup Rust toolchain
         run: just setup
       - name: Build retto-cli
-        run: |
-          just build-cli
-          cd target/release; ls
-          ls -la
+        run: just build-cli
       - name: Package binaries
         run: |
           mkdir -p artifacts
@@ -110,3 +107,57 @@ jobs:
         with:
           name: retto-wasm
           path: retto-wasm/fe/*.tgz
+
+  relase:
+    name: Release retto-cli
+    runs-on: ubuntu-latest
+    needs: [ "build-cli", "build-wasm" ]
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: retto-artifacts
+          merge-multiple: true
+      - name: Display structure of downloaded files
+        run: ls -R retto-artifacts
+      - name: Create GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: >-
+          gh release create
+          '${{ github.ref_name }}'
+          --repo '${{ github.repository }}'
+          --notes ""
+      - name: Upload artifact signatures to GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: >-
+          gh release upload '${{ github.ref_name }}' retto-artifacts/* --repo '${{ github.repository }}'
+
+  publish-wasm-npm:
+    name: Publish retto-wasm on npm
+    runs-on: ubuntu-latest
+    needs: [ "build-wasm" ]
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v4
+      - uses: extractions/setup-just@v3
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4.1.0
+        with:
+          package_json_file: "retto-wasm/fe/package.json"
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: retto-artifacts
+          pattern: "*.tgz"
+          merge-multiple: true
+      - name: Publish retto-wasm on npm
+        run: |
+          TGZ_FILE=$(find retto-artifacts -maxdepth 1 -name '*.tgz' | head -n 1)
+          echo "📦 Found package: $TGZ_FILE"
+          pnpm publish "$TGZ_FILE" --access public --no-git-checks --no-verify-access --dry-run
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
