--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,12 +77,12 @@ jobs:
           mkdir -p artifacts
           cp target/release/retto-cli* artifacts/
           rm artifacts/*.d
-          tar -czf artifacts/retto-cli-${{ matrix.host }}.tar.gz -C artifacts .
+          tar -czf retto-cli-${{ matrix.host }}.tar.gz -C artifacts .
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: retto-cli-${{ matrix.host }}
-          path: artifacts/retto-cli-${{ matrix.host }}.tar.gz
+          path: retto-cli-${{ matrix.host }}.tar.gz
 
   build-wasm:
     name: Build retto-wasm
