--- a/retto-wasm/fe/package.json
+++ b/retto-wasm/fe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "retto-wasm",
+  "name": "@nekoimageland/retto-wasm",
   "version": "0.1.0",
   "scripts": {
     "build": "rolldown -c"
@@ -21,9 +21,9 @@
   ],
   "keywords": [
     "wasm",
-    "ocr"
+    "PaddleOCR"
   ],
-  "author": "pk5ls20",
+  "author": "NekoImageLand",
   "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/NekoImageLand/retto/issues"
