--- a/retto-wasm/fe/package.json
+++ b/retto-wasm/fe/package.json
@@ -24,7 +24,7 @@
     "PaddleOCR"
   ],
   "author": "NekoImageLand",
-  "license": "AGPL-3.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/NekoImageLand/retto/issues"
   },
