--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,10 +74,10 @@ jobs:
   build-cli:
     name: Build retto-cli
     runs-on: ${{ matrix.host }}
-    needs: [ "fmt-check", "clippy-check", "build-check" ]
+    needs: ["fmt-check", "clippy-check", "build-check"]
     strategy:
       matrix:
-        host: [ ubuntu-latest, windows-latest, macos-latest ]
+        host: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - uses: actions/checkout@v4
       - uses: extractions/setup-just@v3
@@ -104,7 +104,7 @@ jobs:
   build-wasm:
     name: Build retto-wasm
     runs-on: ubuntu-latest
-    needs: [ "fmt-check", "clippy-check", "build-check" ]
+    needs: ["fmt-check", "clippy-check", "build-check"]
     steps:
       - uses: actions/checkout@v4
       - uses: extractions/setup-just@v3
@@ -129,7 +129,7 @@ jobs:
   relase:
     name: Release retto-cli
     runs-on: ubuntu-latest
-    needs: [ "build-cli", "build-wasm" ]
+    needs: ["build-cli", "build-wasm"]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Download artifacts
@@ -156,7 +156,7 @@ jobs:
   publish-wasm-npm:
     name: Publish retto-wasm on npm
     runs-on: ubuntu-latest
-    needs: [ "build-wasm" ]
+    needs: ["build-wasm"]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v4
@@ -171,6 +171,10 @@ jobs:
           path: retto-artifacts
           pattern: "retto-wasm"
           merge-multiple: true
+      - name: Set publishing config
+        run: pnpm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - name: Publish retto-wasm on npm
         run: |
           TGZ_FILE=$(find retto-artifacts -name '*.tgz' | head -n 1)
