feat: raii style in `retto-wasm/fe`

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
       - "retto-cli/**"
       - "retto-core/**"
       - "retto-wasm/**"
+      - !"retto-wasm/fe/**"
       - "Cargo.toml"
       - "Cargo.lock"
       - "justfile"
@@ -18,6 +19,7 @@ on:
       - "retto-cli/**"
       - "retto-core/**"
       - "retto-wasm/**"
+      - !"retto-wasm/fe/**"
       - "Cargo.toml"
       - "Cargo.lock"
       - "justfile"
