fix: workflow syntax

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
       - "retto-cli/**"
       - "retto-core/**"
       - "retto-wasm/**"
-      - !"retto-wasm/fe/**"
+      - "!retto-wasm/fe/**"
       - "Cargo.toml"
       - "Cargo.lock"
       - "justfile"
@@ -19,7 +19,7 @@ on:
       - "retto-cli/**"
       - "retto-core/**"
       - "retto-wasm/**"
-      - !"retto-wasm/fe/**"
+      - "!retto-wasm/fe/**"
       - "Cargo.toml"
       - "Cargo.lock"
       - "justfile"
