--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ ort-sys = { git = "https://github.com/pykeio/ort", default-features = false }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 hf-hub = "0.4.3"
+uuid = { version = "1.17.0", features = ["v4"] }
 
 [patch.crates-io]
 clipper-sys = { git = "https://github.com/NekoImageLand/clipper-sys", branch = "master" }
