--- a/retto-wasm/Cargo.toml
+++ b/retto-wasm/Cargo.toml
@@ -14,7 +14,7 @@ serde_json.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 paste.workspace = true
-
+uuid.workspace = true
 
 [features]
-download-models = ["retto-core/download-models"]
+embed-models = ["retto-core/download-models"]
