--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,7 +127,7 @@ jobs:
           path: retto-wasm/fe/*.tgz
 
   relase:
-    name: Release retto-cli
+    name: Release retto
     runs-on: ubuntu-latest
     needs: ["build-cli", "build-wasm"]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
